--- a/DJITracking/app/src/main/res/values/strings.xml
+++ b/DJITracking/app/src/main/res/values/strings.xml
@@ -28,12 +28,12 @@
     <!--ActiveTack info-->
 
     <!--UI-->
-    <string name="ui_tv_activity_tracking">Active Tracking</string>
+    <string name="ui_tv_activity_tracking">Tracking</string>
 
     <string name="ui_tv_product_information">Product Information</string>
-    <string name="ui_tv_running_info">Running info</string>
+    <string name="ui_tv_mission_control_info">Mission Control Info</string>
     <string name="ui_tv_timeline_info">Timeline info</string>
-    <string name="ui_tv_tracking_info">Tracking info</string>
+    <string name="ui_tv_active_track_info">ActiveTrack info</string>
 
     <string name="ui_btn_init_mission">Init</string>
     <string name="ui_btn_start_mission">Start</string>
@@ -49,7 +49,6 @@
     <string name="ui_btn_show_aim_rect">Aim</string>
     <string name="ui_btn_start_tracking">Track</string>
     <string name="ui_btn_active_track_info">Info</string>
-    <string name="ui_tv_tracking_task_info">Tracking Task Info</string>
     <string name="ui_btn_open_track">Track</string>
     <string name="info_flight_aircraft_init_success">Init timeline success.</string>
     <string name="ui_tv_state_longitude">Longitude:</string>
