--- a/DJIVideoStreamAnalysis/app/src/main/res/values/strings.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/res/values/strings.xml
@@ -13,14 +13,54 @@
     <string name="info_connection_rc_only_connected">Only RC Connected.</string>
     <!--Connection info-->
 
+    <!--Flight info-->
+    <string name="info_flight_set_home_point_error">Can not set home point.</string>
+    <string name="info_flight_set_home_point_success">Home point set successfully.</string>
+    <string name="info_flight_aircraft_no_home_point">No home point.</string>
+    <!--Flight info-->
+
+    <!--ActiveTack info-->
+    <string name="info_active_track_show_aim">Showing Aim Rect</string>
+
+    <string name="info_active_track_state_current">Current state:</string>
+    <string name="info_active_track_state_previous">PreviousState:</string>
+    <string name="info_active_track_state_target">TargetState:</string>
+    <!--ActiveTack info-->
+
     <!--UI-->
-    <string name="ui_tv_video_stream">Video Stream</string>
+    <string name="ui_tv_activity_tracking">Active Tracking</string>
 
     <string name="ui_tv_product_information">Product Information</string>
+    <string name="ui_tv_running_info">Running info</string>
+    <string name="ui_tv_timeline_info">Timeline info</string>
+    <string name="ui_tv_tracking_info">Tracking info</string>
 
+    <string name="ui_btn_init_mission">Init</string>
+    <string name="ui_btn_start_mission">Start</string>
+    <string name="ui_btn_pause_mission">Pause</string>
+    <string name="ui_btn_resume_mission">Resume</string>
+    <string name="ui_btn_stop_mission">Stop</string>
+    <string name="ui_btn_clear_timeline">Clear</string>
+    <string name="ui_btn_set_recommended_configuration">Config</string>
+    <string name="ui_btn_confirmation_accept">A</string>
+    <string name="ui_btn_confirmation_reject">R</string>
+    <string name="ui_btn_open_mission_control">Mission Control</string>
+    <string name="ui_btn_open_active_track">Active Track</string>
+    <string name="ui_btn_show_aim_rect">Aim</string>
+    <string name="ui_btn_start_tracking">Track</string>
+    <string name="ui_btn_active_track_info">Info</string>
+    <string name="ui_tv_tracking_task_info">Tracking Task Info</string>
+    <string name="ui_btn_open_track">Track</string>
+    <string name="info_flight_aircraft_init_success">Init timeline success.</string>
     <string name="ui_tv_state_longitude">Longitude:</string>
     <string name="ui_tv_state_latitude">Latitude:</string>
     <string name="ui_tv_state_altitude">Altitude:</string>
     <string name="ui_btn_open_video_stream_activity">Video Stream</string>
+    <string name="ui_tv_label_ll_container_state">Aircraft location</string>
+    <string name="ui_tv_label_ll_container_camera_settings">Camera settings</string>
+    <string name="ui_tv_label_ll_container_video_data_callback">Video data callback</string>
+    <string name="ui_tv_label_ll_container_video_data_callback_android_impl">Android decoder</string>
+    <string name="ui_tv_label_tv_video_data_callback_dequeue_input_buffer">Input:</string>
+    <string name="ui_tv_label_tv_video_data_callback_dequeue_output_buffer">Output:</string>
     <!--UI-->
 </resources>
